--- a/source/jade/edit-interface.jade
+++ b/source/jade/edit-interface.jade
@@ -8,7 +8,6 @@ block title
 	
 block styles
 	link(href="css/jquery.datetimepicker.css", rel="stylesheet")
-	link(href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css" rel="stylesheet")
 	link(href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet")
 block scripts
 	script(src="js/jquery.datetimepicker.js", type="text/javascript")
@@ -52,130 +51,74 @@ block append content
 								a(href="#").js-open-cal.cal
 							input(type="submit" value="Найти")
 						.sort-articles По дате добавления новости
-						ul.articles
-							li.articles__item.inline
-								.articles__item-thumb(style='background: url("img/content/edit-page/1.png")')
-								.articles__item-info
-									.articles__item-date-added Добавлен: 13 октября 2012
-									.articles__item-title Текстильный импортозамещающий комплекс <br> появится в Ростовской области
-									.imeta.articles__item-stats
-										.comments
-											a(href='#') 51
-										.views
-											a(href='#') 225
-								ul.articles__item-controls.inline
-									li.articles__item-controls-edit
-									li.articles__item-controls-delete
-							li.articles__edit
-								form(action="#").block
-									.formgroup.articles__edit-title
-										label Заголовок
-										textarea Денис Мантуров принял участие в совещании Дмитрия Медведева по развитию микроэлектроники
-									.formgroup.articles__edit-lead
-										label Лид
-										textarea В пригороде Ростова-на-Дону, в районе аэродрома Батайск, будет создан вертолетный кластер. Он включит в себя летно-испытательный комплекс, сборочное производство вертолетов типа Ми-26, Ми-28, Ми-35 и перспективного среднего вертолета, а также центр по производству композитных лопастей и целый ряд других подразделений. О проекте пишет «Российская газета».
-									.formgroup.articles__edit-text
-										label Текст
-										.summernote Участники совещания обсудили ход подготовки к ВИИФ-2014, основные мероприятия программы российского участия в выставке, а также формирование экспозиции. ВИИФ-2014 является крупнейшей многоотраслевой выставкой в Юго-Восточной Азии и проводится ежегодно Вьетнамским выставочно-ярмарочным центром VEFAC при поддержке правительства Социалистической Республики Вьетнам. Участие России в выставке направлено на развитие и укрепление торгово-экономических связей между Россией и Вьетнамом. Это позволит расширить инвестиционное сотрудничество по приоритетным направлениям, среди которых нефтегазовая отрасль, энергетика, добыча полезных ископаемых, туристическая недвижимость и другие сферы. Кроме этого, участие в выставке способствует расширению сотрудничества в сфере промышленного производства, увеличению объема экспорта, диверсификации форм и направлений международного экономического сотрудничества. Программа мероприятий российской экспозиции включает Российско-Вьетнамский бизнес-форум, тематические круглые столы, презентации компаний-экспонентов, двусторонние встречи с представителями официальных, деловых и финансовых кругов, посещение крупнейших государственных корпораций и объединений, самой большой промышленной зоны Северного Вьетнама Thang Long и технопарка высоких технологий. 
-									.formgroup.articles__edit-images
-										label Изображение
-										ul.articles__edit-images-list.inline
-											li.articles__edit-images-list-item(style='background: url("img/content/edit-page/1.png")')
-												.articles__edit-images-list-item--edit
-											li.articles__edit-images-list-item--add
-												.articles__edit-images-list-item--add-icon
-												.articles__edit-images-list-item--add-text добавить изображение
-							li.articles__item.inline
-								.articles__item-thumb(style='background: url("img/content/edit-page/1.png")')
-								.articles__item-info
-									.articles__item-date-added Добавлен: 13 октября 2012
-									.articles__item-title Текстильный импортозамещающий комплекс <br> появится в Ростовской области
-									.imeta.articles__item-stats
-										.comments
-											a(href='#') 51
-										.views
-											a(href='#') 225
-								ul.articles__item-controls.inline
-									li.articles__item-controls-edit
-									li.articles__item-controls-delete
-							li.articles__item.inline
-								.articles__item-thumb(style='background: url("img/content/edit-page/1.png")')
-								.articles__item-info
-									.articles__item-date-added Добавлен: 13 октября 2012
-									.articles__item-title Текстильный импортозамещающий комплекс <br> появится в Ростовской области
-									.imeta.articles__item-stats
-										.comments
-											a(href='#') 51
-										.views
-											a(href='#') 225
-								ul.articles__item-controls.inline
-									li.articles__item-controls-edit
-									li.articles__item-controls-delete
-							li.articles__item.inline
-								.articles__item-thumb(style='background: url("img/content/edit-page/1.png")')
-								.articles__item-info
-									.articles__item-date-added Добавлен: 13 октября 2012
-									.articles__item-title Текстильный импортозамещающий комплекс <br> появится в Ростовской области
-									.imeta.articles__item-stats
-										.comments
-											a(href='#') 51
-										.views
-											a(href='#') 225
-								ul.articles__item-controls.inline
-									li.articles__item-controls-edit
-									li.articles__item-controls-delete
-							li.articles__item.inline
-								.articles__item-thumb(style='background: url("img/content/edit-page/1.png")')
-								.articles__item-info
-									.articles__item-date-added Добавлен: 13 октября 2012
-									.articles__item-title Текстильный импортозамещающий комплекс <br> появится в Ростовской области
-									.imeta.articles__item-stats
-										.comments
-											a(href='#') 51
-										.views
-											a(href='#') 225
-								ul.articles__item-controls.inline
-									li.articles__item-controls-edit
-									li.articles__item-controls-delete
-							li.articles__item.inline
-								.articles__item-thumb(style='background: url("img/content/edit-page/1.png")')
-								.articles__item-info
-									.articles__item-date-added Добавлен: 13 октября 2012
-									.articles__item-title Текстильный импортозамещающий комплекс <br> появится в Ростовской области
-									.imeta.articles__item-stats
-										.comments
-											a(href='#') 51
-										.views
-											a(href='#') 225
-								ul.articles__item-controls.inline
-									li.articles__item-controls-edit
-									li.articles__item-controls-delete
-							li.articles__item.inline
-								.articles__item-thumb(style='background: url("img/content/edit-page/1.png")')
-								.articles__item-info
-									.articles__item-date-added Добавлен: 13 октября 2012
-									.articles__item-title Текстильный импортозамещающий комплекс <br> появится в Ростовской области
-									.imeta.articles__item-stats
-										.comments
-											a(href='#') 51
-										.views
-											a(href='#') 225
-								ul.articles__item-controls.inline
-									li.articles__item-controls-edit
-									li.articles__item-controls-delete
-							li.articles__item.inline
-								.articles__item-thumb(style='background: url("img/content/edit-page/1.png")')
-								.articles__item-info
-									.articles__item-date-added Добавлен: 13 октября 2012
-									.articles__item-title Текстильный импортозамещающий комплекс <br> появится в Ростовской области
-									.imeta.articles__item-stats
-										.comments
-											a(href='#') 51
-										.views
-											a(href='#') 225
-								ul.articles__item-controls.inline
-									li.articles__item-controls-edit
-									li.articles__item-controls-delete
+						
+						//---------- ----------
+
+						mixin article(name)
+							.item-edit-con.js-edit-item-box
+								.articles__item
+									.articles__item-thumb
+										img(src="img/content/edit-page/1.png", alt="")
+									.articles__item-info
+										.articles__item-date-added Добавлен: 13 октября 2012
+										.articles__item-title #{name}
+										.imeta.articles__item-stats
+											.comments
+												a(href='#') 51
+											.views
+												a(href='#') 225
+									ul.articles__item-controls.inline
+										li.articles__item-controls-edit.js-edit-link
+										li.articles__item-controls-delete
+								//---------- 
+								.articles__edit.js-edit-item
+									form(action="#").block
+										.formgroup.articles__edit-title
+											label Заголовок
+											textarea #{name}
+										.formgroup.articles__edit-lead
+											label Лид
+											textarea В пригороде Ростова-на-Дону, в районе аэродрома Батайск, будет создан вертолетный кластер. Он включит в себя летно-испытательный комплекс, сборочное производство вертолетов типа Ми-26, Ми-28, Ми-35 и перспективного среднего вертолета, а также центр по производству композитных лопастей и целый ряд других подразделений. О проекте пишет «Российская газета».
+										.formgroup.articles__edit-text
+											label Текст
+											.summernote 
+												p Участники совещания обсудили ход подготовки к ВИИФ-2014, основные мероприятия программы российского участия в выставке, а также формирование экспозиции. ВИИФ-2014 является крупнейшей многоотраслевой выставкой в Юго-Восточной Азии и проводится ежегодно Вьетнамским выставочно-ярмарочным центром VEFAC при поддержке правительства Социалистической Республики Вьетнам. Участие России в выставке направлено на развитие и укрепление торгово-экономических связей между Россией и Вьетнамом. 
+												p Это позволит расширить инвестиционное сотрудничество по приоритетным направлениям, среди которых нефтегазовая отрасль, энергетика, добыча полезных ископаемых, туристическая недвижимость и другие сферы. Кроме этого, участие в выставке способствует расширению сотрудничества в сфере промышленного производства, увеличению объема экспорта, диверсификации форм и направлений международного экономического сотрудничества. Программа мероприятий российской экспозиции включает Российско-Вьетнамский бизнес-форум, тематические круглые столы, презентации компаний-экспонентов, двусторонние встречи с представителями официальных, деловых и финансовых кругов, посещение крупнейших государственных корпораций и объединений, самой большой промышленной зоны Северного Вьетнама Thang Long и технопарка высоких технологий. 
+												ul
+													li Lorem ipsum dolor sit.
+													li Cum consequatur, quae eveniet.
+													li Quisquam qui ab, sint.
+													li Molestiae excepturi, vel earum.
+													li Quaerat nostrum voluptas dolores.
+													li Obcaecati unde ab vel!
+										.formgroup.articles__edit-images
+											label Изображение
+											ul.articles__edit-images-list.inline
+												li.articles__edit-images-list-item
+													img(src="img/content/edit-page/1.png", alt="")
+													.articles__edit-images-list-item--edit
+												li.articles__edit-images-list-item
+													img(src="img/content/edit-page/1.png", alt="")
+													.articles__edit-images-list-item--edit
+												li.articles__edit-images-list-item
+													img(src="img/content/edit-page/1.png", alt="")
+													.articles__edit-images-list-item--edit
+												li.articles__edit-images-list-item
+													img(src="img/content/edit-page/1.png", alt="")
+													.articles__edit-images-list-item--edit
+												li.articles__edit-images-list-item--add
+													.articles__edit-images-list-item--add-icon
+													.articles__edit-images-list-item--add-text добавить изображение
+											a(href="#").btn-orange-wide.edit-save Сохранить
+						
+						//---------- ----------
+
+						.articles
+							+article("Текстильный импортозамещающий комплекс появится в Ростовской области")
+							+article("ВИИФ-2014 является крупнейшей многоотраслевой выставкой")
+					
+					//---------- ---------- ---------- 
+					
 					.tabs-content.js-tabs-content(data-id="#js-tab-success")
 						a.add(href="#") + Добавить историю успеха
 						form.inline.form-top
@@ -190,6 +133,13 @@ block append content
 								a(href="#").js-open-cal.cal
 							input(type="submit" value="Найти")
 						.sort-articles По дате добавления новости
+
+						.articles
+							+article("Текстильный импортозамещающий комплекс появится в Ростовской области")
+							+article("ВИИФ-2014 является крупнейшей многоотраслевой выставкой")
+					
+					//---------- ---------- ----------
+
 					.tabs-content.js-tabs-content(data-id="#js-tab-analytics")
 						a.add(href="#") + Добавить аналитическую статью
 						form.inline.form-top
@@ -204,6 +154,12 @@ block append content
 								a(href="#").js-open-cal.cal
 							input(type="submit" value="Найти")
 						.sort-articles По дате добавления новости
+						.articles
+							+article("Текстильный импортозамещающий комплекс появится в Ростовской области")
+							+article("ВИИФ-2014 является крупнейшей многоотраслевой выставкой")
+
+					//---------- ---------- ----------
+
 					.tabs-content.js-tabs-content(data-id="#js-tab-documents")
 						a.add(href="#") + Добавить документ
 						form.inline.form-top
@@ -218,16 +174,73 @@ block append content
 								a(href="#").js-open-cal.cal
 							input(type="submit" value="Найти")
 						.sort-articles По дате добавления новости
+						.box-docs
+							mixin item-docs()
+								.box-links__item.js-edit-item-box
+									.box-links__item-in.js-item
+										.item-docs
+											.file-list
+												a(href="#") JPG - 7 Мб
+												a(href="#") PDF - 12 Мб
+											.file-desc.pad-right
+												.date Добавлен: 13 октября 2012
+												.text Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).
+												.subtext Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения
+												.tags
+													a(href="#").tags-item
+														span.name Выставки
+														span.count 12
+													a(href="#").tags-item
+														span.name Машиностроение
+														span.count.empty
+											ul.articles__item-controls.inline.pad-left
+												li.articles__item-controls-edit.js-edit-link-replace
+												li.articles__item-controls-delete
+									.box-links__item-edit.table.js-edit-item
+										.item-docs
+											.file-list
+												a(href="#").del JPG - 7 Мб
+												a(href="#").del PDF - 12 Мб
+											.file-desc
+												input(type="text", value="Официальный сайт Минпромторг РФ").inp-full
+												input(type="text", value="http://minpromtorg.gov.ru/").inp-full
+												textarea.inp-full Официальный сайт Министерства промышленности и торговли Российской Федерации. Содержит новости, документы и прочая информация.
+												.tags.mar-top-20
+													a(href="#").tags-item
+														span.name Выставки
+														span.count 12
+													a(href="#").tags-item
+														span.name Машиностроение
+														span.count.empty
+										.edit
+											a(href="#").btn-center-or.js-edit-link-replace Сохранить
+
+							+item-docs
+					//---------- ---------- ----------
+
 					.tabs-content.js-tabs-content(data-id="#js-tab-links")
-						form.inline.form-top
-							.search-con
-								input.inp-text(type="text" placeholder="Найти новость")
-							.dates.inline
-								span с
-								input(type="text", placeholder="дата от").js-calendar-widget.calendar-widget-pop
-								a(href="#").js-open-cal.cal
-								span до
-								input(type="text", placeholder="дата до").js-calendar-widget.calendar-widget-pop2
-								a(href="#").js-open-cal.cal
-							input(type="submit" value="Найти")
-						.sort-articles По дате добавления новости
+						a.add(href="#") + Добавить ссылку
+						.box-links
+							mixin box-links__item()
+								.box-links__item.js-edit-item-box
+									.box-links__item-in.js-item
+										.idesc
+											.name Официальный сайт Минпромторг РФ
+											.site 
+												a(href="#") http://minpromtorg.gov.ru/
+											.text Официальный сайт Министерства промышленности и торговли Российской Федерации. Содержит новости, документы и прочая информация.
+										.igo
+											ul.articles__item-controls.inline
+												li.articles__item-controls-edit.js-edit-link-replace
+												li.articles__item-controls-delete
+									.box-links__item-edit.table.js-edit-item
+										.col.fields
+											input(type="text", placeholder="Официальный сайт Минпромторг РФ").inp-full
+											input(type="text", placeholder="http://minpromtorg.gov.ru/").inp-full
+											textarea.inp-full Официальный сайт Министерства промышленности и торговли Российской Федерации. Содержит новости, документы и прочая информация.
+										.edit
+											a(href="#").btn-center-or.js-edit-link-replace Сохранить
+								.js-edit-item
+							+box-links__item
+							+box-links__item 
+							
