--- a/site/css/_summernote.css
+++ b/site/css/_summernote.css
@@ -388,3 +388,18 @@
   border-radius: 5px;
   opacity: 0.7;
 }
+.note-editable ul {
+  margin: 0 0 15px 10px;
+}
+.note-editable ul li {
+  margin: 0 0 15px 10px;
+  list-style: disc;
+}
+.dropdown-menu {
+  list-style: none !important;
+  margin: 0;
+}
+.dropdown-menu li {
+  margin: 0;
+  list-style: none !important;
+}
