--- a/source/styl/_summernote.styl
+++ b/source/styl/_summernote.styl
@@ -296,3 +296,16 @@
 			-moz-border-radius 5px
 			border-radius 5px
 			opacity .7
+			
+.note-editable
+	ul 
+		margin 0 0 15px 10px
+		li
+			margin 0 0 15px 10px
+			list-style disc
+.dropdown-menu
+	list-style none !important
+	margin 0
+	li
+		margin 0
+		list-style none !important
