--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -1,3 +1,4 @@
+@import "../bootstrap/bootstrap.styl"
 @import "common.styl"
 @import "_summernote.styl"
 
@@ -151,7 +152,11 @@ i
 	color-orange()
 	font-size 12px
 	text-transform uppercase
-
+.btn-center-or
+	color-orange()
+	display inline-block
+	
+	
 
 //	TEXT
 // ===============================================
@@ -543,6 +548,8 @@ color-orange()
 	margin-bottom 10px
 .mar-top-20m
 	margin-top -15px
+.mar-top-20
+	margin-top 20px
 .sm-mar
 	margin-bottom 10px
 	&:last-child
@@ -1406,8 +1413,14 @@ a.link-orange
 			color #333
 			line-height 16px
 				
-			
-		
+input.inp-full
+	full() 
+	display block
+	width 100%	
+textarea.inp-full
+	full() 
+	display block
+	width 100%	
 .icon-ntp
 	display inline-block
 	margin-top -1px
@@ -1660,6 +1673,33 @@ a.link-orange
 				background #fafafa url("../img/link.jpg") center center no-repeat;
 				&:hover
 					opacity .7;
+.box-links__item
+	position relative
+	@extend .box-links .item
+
+.box-links__item-edit
+	position relative
+	margin-bottom 0px
+	display none
+	.fields
+		padding 10px
+		input, textarea
+			width 80%
+			color #999
+	.edit
+		@extend .box-links .item .igo
+		display table-cell 
+		vertical-align middle
+		width 207px
+		a
+			display inline-block
+			height auto
+			text-align center
+			vertical-align middle
+			background none
+			font-size 14px
+			text-transform uppercase
+			tdn() 
 
 .box-doc-lnks
 	clearfix() 
@@ -2198,6 +2238,9 @@ a.link-orange
 				background url("../img/icons/document.png") 0 center no-repeat;
 				&:hover
 					opacity .7; 
+			a.del
+				margin-bottom 10px
+				background url("../img/icons/circular-delete-h.png") 0 3px no-repeat;
 			// mod
 			&_nobg
 				@extend .box-docs .item .file-list
@@ -2234,6 +2277,22 @@ a.link-orange
 		p
 			font-size 24px;
 
+.item-docs
+	@extend .box-docs .item
+	border none !important
+	margin-bottom 0 !important
+	padding-bottom 0
+	.file-desc
+		width 100%
+	textarea.inp-full, input.inp-full
+		display block
+		full() 
+		width 100%
+.pad-right
+	padding-right 280px !important
+	
+.pad-left
+	margin 0
 // ===============================================
 
 .box-news-prev
@@ -3525,7 +3584,9 @@ footer
 			list-style none
 			margin-bottom 2px 
 
-// edit-interface.jade
+
+// edit-interface
+// ===============================================
 .edit-interface
 	.inline
 		margin 0
@@ -3539,8 +3600,9 @@ footer
 		font-size 21px
 		latoblack()
 		text-transform uppercase
-		border 5px solid #ccc 
+		border 3px solid #ccc 
 		&:hover
+			color-orange()
 			border-color #999
 			text-decoration none
 		&:active
@@ -3609,25 +3671,22 @@ footer
 			border-width: 5px;
 .articles
 	margin 0
-	li
-		list-style none
-		margin-left 0
-	> li
+	.item-edit-con
 		border 1px solid #e5e5e5
-		margin-bottom 20px!important
+		margin-bottom 20px
 	&__item
-		&:last-of-type
-			margin-bottom 0!important
 		width 100%
 		position relative
 		&-thumb
-			width 15.5555556%
-			height 98px
-			background-repeat no-repeat!important
-			background-size cover!important
+			display table-cell
+			vertical-align middle
+			img 
+				vertical-align middle
+				display inline-block
 		&-info
-			width 62.2222222%
-			padding-left 3.2222222%
+			display table-cell
+			vertical-align top
+			padding-left 3%
 		&-date-added
 			color #CCC
 			font-size 10px
@@ -3641,12 +3700,14 @@ footer
 			margin-top 5px
 			line-height 1
 		&-controls
+			lino()
 			width 22.2222222%
 			position absolute
 			top 0
 			bottom 0
 			right 0
 			margin 0
+			border-left 1px solid #e5e5e5
 			li
 				width 50%
 				height 100%
@@ -3677,7 +3738,13 @@ footer
 				&:hover
 					background url(../img/icons/delete-h.png)
 	&__edit
-		padding 29px 40px 24px 20px 
+		display none
+		border-top 1px solid #E5E5E5
+		padding 29px 20px 24px 20px 
+		.edit-save
+			margin-top -50px
+			float right
+			color #000 !important
 		label
 			color #333
 			font-size 14px
@@ -3699,25 +3766,31 @@ footer
 		&-text
 			margin-bottom 29px
 		&-images-list
+			lino()
 			display block
+			padding-right 100px
 			&-item
 				margin-left 19px!important
+				margin-bottom 15px !important
 				width 140px
-				height 100px
 				position relative
 				overflow hidden
+				img 
+					display block
 				&--edit
-					height 100px
+					height 100%
 					width 40px
 					opacity 0.7
 					position absolute
-					top 0
+					top 1px
 					left -40px
 					background url(../img/icons/circular-delete.png) no-repeat center, #000
+					anim()
 					&:hover
+						left 0
 						cursor pointer
 						background url(../img/icons/circular-delete-h.png) no-repeat center, #000
-						transition all 0.4s ease-in-out
+						
 				&:hover &--edit
 					left 0
 				&--add
@@ -3732,13 +3805,16 @@ footer
 						width 32px
 						margin 17px auto 8px
 						background url(../img/icons/circular-add.png) no-repeat center
+						anim()
 					&-text
 						color #CCC
 						font-size 12px
 						width 80px
 						margin 0 auto
+						anim()
 					&:hover
 						cursor pointer
+						opacity .7
 					&:hover &-icon
 						background url(../img/icons/circular-add-h.png) no-repeat center
 					&:hover	&-text
