--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -4,7 +4,7 @@
 
 
 min-height = "screen and (min-height: 768px)"
-min-width = "screen and (max-width 1350px)"
+min-width = "screen and (max-width 1400px)"
 
 
 body
@@ -168,7 +168,12 @@ color-orange()
 	font-size 14px
 .fz11
 	font-size 11px
-	
+.text_lh16
+	line-height 16px
+	margin-bottom 0
+	p
+		line-height 16px
+		margin-bottom 10px
 .textarea-full
 	full() 
 	width 100%
@@ -516,13 +521,13 @@ color-orange()
 			a
 				border-bottom none; 
 .page-name
-	width 80%
 	padding-bottom 40px;
 	latolight();
 	h1
 		margin 0;
 		font-size 72px; latolight();
 	p
+		width 80%
 		margin 0; latolight(); font-size 18px; 
 .main-left
 	width 75%; display table-cell;
@@ -1131,7 +1136,7 @@ a.link-orange
 
 
 .orders-box
-	z-index 3
+	z-index 12
 	position absolute 
 	left -1px 
 	top -30px
