--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -757,6 +757,7 @@ img.full
 .order-service-cont
 	clearfix()
 	padding 20px 0
+	height 40px
 	> a
 		float left
 		padding 10px 40px	
@@ -803,7 +804,7 @@ h1.service-title
 	width 11px
 	height 16px
 	margin 0 0 0 5px
-	vertical-align bottom
+	vertical-align middle
 	background url("../img/icons/updade-black.png") 0 center no-repeat
 	&:hover
 		transform rotate(180deg)
@@ -2017,6 +2018,7 @@ textarea.inp-full
 			li.selected
 				a
 					color #333;
+					font-weight 600
 
 .boxside-btns
 	padding-bottom 20px;
