--- a/source/jade/services-item.jade
+++ b/source/jade/services-item.jade
@@ -48,28 +48,33 @@ block append content
 									span.count 388
 						.iprev
 							img(src="img/content/180-135-2.jpg", alt="")
-					p
-						strong Выполняемые работы:
-						ul 
-							li оптическая микроскопия
-							li электронная микроскопия
-							li локальный микроанализ химического состава материалов
-							li дюраметрические исследования
-							li изучение прокаливаемости
-							li микро/макро травление для выявления микро/макро структуры
-							li анализ и обработка изображений (структурных составляющих, неметаллических включений, размер зерна и т.п.)
-					p.grey-without-strong
-						strong Основные возможности: 
-						| Исследования образцов и изделий из сплавов черных и цветных металлов.
-					p.grey-without-strong
-						strong Производственая мощность: 
-						| До 250 исследуемых образцов в месяц
-					p.grey-without-strong
-						strong Аккредитация: 
-						| есть
-					p.grey-without-strong
-						strong Организация (ВУЗ / ГНЦ): 
-						| Национальный исследовательский Томский политехнический университет
+						p
+							strong Сведения о компании:
+							ul 
+								li оптическая микроскопия
+								li электронная микроскопия
+								li локальный микроанализ химического состава материалов
+								li дюраметрические исследования
+								li изучение прокаливаемости
+								li микро/макро травление для выявления микро/макро структуры
+								li анализ и обработка изображений (структурных составляющих, неметаллических включений, размер зерна и т.п.)
+						p.grey-without-strong
+							strong Наименование: 
+							| Промстройинжиниринг
+						p.grey-without-strong
+							strong Год основания: 
+							| 1992
+						p.grey-without-strong
+							strong Основные реализованные проекты в заявленной области: 
+							ul
+								li Цех ремонта тяговых электродвигателей подвижного состава РЖД 
+								li Участок изготовления корпусных деталей
+						p.grey-without-strong
+							strong Выручка годовая: 
+							| 300 млн. руб.
+						p.grey-without-strong
+							strong Лицензия: 
+							| Есть
 				.order-service-cont
 					a(href="#").btn-orange.inline Заказать услугу
 					a(href="#").btn-grey-dashed.js-show-contacts Показать контакты
