--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -155,7 +155,12 @@ i
 .btn-center-or
 	color-orange()
 	display inline-block
-	
+.width240
+	width 240px
+	full() 
+.width175
+	width 175px
+	full() 
 	
 
 //	TEXT
