--- a/source/jade/equipments-gm.jade
+++ b/source/jade/equipments-gm.jade
@@ -55,29 +55,34 @@ block append content
 									span.count 388
 						.iprev
 							img(src="img/content/equip-1.jpg", alt="")
-					p.grey-without-strong
-						strong Назначение <br>
-						| Изготовление деталей типа тел вращения
-					p.grey-without-strong
-						strong Описание <br>
-						| Прецизионный токарный станок с ЧПУ выполнен по прогрессивной схеме компоновки с расположением револьверной головки на наклонных направляющих, что увеличивает жесткость конструкции, позволяет уменьшить размеры станка по ширине и оптимально распределить по направляющим нагрузки, образующиеся в процессе резания.
-					p.grey-without-strong
-						strong Основные характеристики <br>
-						| Наибольший диаметр обрабатываемого изделия – 600 мм <br>Число управляемых координат – 2
-					p.grey-without-strong
-						strong Год выпуска: 
-						| 2012
-					p.grey-without-strong
-						strong Производитель:
-						| SOMAB, Франция
-					p.grey-without-strong
-						strong Контакты: 
-						| +7 495 342-3424, mail@mail.ru
-					p &nbsp;
+						p.grey-without-strong
+							strong Назначение <br>
+							| Изготовление деталей типа тел вращения
+						p.grey-without-strong
+							strong Описание <br>
+							| Прецизионный токарный станок с ЧПУ выполнен по прогрессивной схеме компоновки с расположением револьверной головки на наклонных направляющих, что увеличивает жесткость конструкции, позволяет уменьшить размеры станка по ширине и оптимально распределить по направляющим нагрузки, образующиеся в процессе резания.
+						p.grey-without-strong
+							strong Основные характеристики <br>
+							| Наибольший диаметр обрабатываемого изделия – 600 мм <br>Число управляемых координат – 2
+						p.grey-without-strong
+							strong Год выпуска: 
+							| 2012
+						p.grey-without-strong
+							strong Производитель: 
+							| SOMAB, Франция
+						p.grey-without-strong
+							strong Состоаяние: 
+							| новый
+						p.grey-without-strong
+							strong Порядок предоставления услуг по доступу к оборудованию: <br>
+							| Передача в собственность 
+						p.grey-without-strong
+							strong Организация (ВУЗ / ГНЦ): 
+							| Национальный исследовательский Томский политехнический университет
+						p &nbsp;
 					.inline
 						a(href="#").btn-orange-wide.inline Одобрить
 						a(href="#reasons-refusal").btn-grey-wide Отклонить
-
 		.main-right
 			.box-support
 				.bcon
